--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .terraform*
 newkey.pem
 random
-terraform*
+./terraform*
 
 
 # sed -i "s#.*ansible_host.*#ansible_host: $(terraform -chdir=./terraform  output -raw puplic-ip-ec2 )#" ./ansible/group_vars/proxy.yaml 
